fix: misc IE 11-specific UI and layout bugs

--- a/packages/uikit-workshop/src/sass/scss/04-components/_controls.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_controls.scss
@@ -10,6 +10,11 @@
   margin-left: auto; /* 2 */
   display: flex;
   flex-wrap: nowrap;
+
+  // IE 11 layout bug
+  .pl-c-body--theme-sidebar & {
+    display: block;
+  }
 }
 
 /**
