--- a/packages/uikit-workshop/src/sass/scss/04-components/_ish-sizing.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_ish-sizing.scss
@@ -70,6 +70,8 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  overflow-x: auto;
+  padding: 0 0.25rem;
 
   @media all and (min-width: $pl-bp-med) {
     align-items: center;
@@ -95,4 +97,13 @@
  */
 .pl-c-size-list__action {
   @include linkStyle();
+}
+
+// Force list items to center align if not overflow scrolling
+.pl-c-size-list__item:first-child {
+  margin-left: auto;
+}
+
+.pl-c-size-list__item:last-child {
+  margin-right: auto;
 }
