--- a/packages/uikit-workshop/src/scripts/components/pl-layout/pl-layout.scss
+++ b/packages/uikit-workshop/src/scripts/components/pl-layout/pl-layout.scss
@@ -5,6 +5,7 @@ pl-layout {
   flex-direction: column;
   height: 100%;
   background-color: $pl-color-gray-13;
+  overflow: hidden; // Fix for IE 11 layout bug
 
   &.pl-c-body--theme-sidebar {
     @media all and (min-width: $pl-bp-med) {
